--- a/Calculadora.html
+++ b/Calculadora.html
@@ -86,6 +86,40 @@
         "El precio justo para este servicio es: <br><strong>" + precio.toLocaleString() + "</strong>";
     });
   </script>
+  <footer style="text-align: center; margin-top: 4rem; padding-top: 2rem; border-top: 1px solid #eaeaea;">
+  <img src="logo.png" alt="Las Marías Digital" style="max-width: 120px; margin-bottom: 1rem;" />
+  <p style="font-family: 'Poppins', sans-serif; font-size: 14px; color: #555;">
+    Influenciando a mamás +30 a generar ingresos desde casa
+  </p>
+  <p style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #999;">
+    © 2025 · Producto hecho por <strong>lasmarias.digital</strong>
+  </p>
+  <div style="margin-top: 1rem;">
+    <a href="https://www.instagram.com/lasmarias.digital?igsh=OWF1a2p0YjEyc2I=" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">Instagram</a>
+    <a href="https://www.facebook.com/share/16dXRKS7Ce/" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">Facebook</a>
+    <a href="https://www.tiktok.com/@lasmarias.digital?_t=ZS-8xyCoLpkrAe&_r=1" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">TikTok</a>
+    <a href="https://youtube.com/@lasmarias.digital?si=bqxZkfaowGB81HN8" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">YouTube</a>
+  </div>
+</footer>
+<footer style="text-align: center; margin-top: 4rem; padding-top: 2rem; border-top: 1px solid #eaeaea;">
+  <img src="logo.png" alt="Las Marías Digital" style="max-width: 120px; margin-bottom: 1rem;" />
+  <p style="font-family: 'Poppins', sans-serif; font-size: 14px; color: #555;">
+    Influenciando a mamás +30 a generar ingresos desde casa
+  </p>
+  <p style="font-family: 'Poppins', sans-serif; font-size: 12px; color: #999;">
+    © 2025 · Producto hecho por <strong>lasmarias.digital</strong>
+  </p>
+  <div style="margin-top: 1rem;">
+    <a href="https://www.instagram.com/lasmarias.digital?igsh=OWF1a2p0YjEyc2I=" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">Instagram</a>
+    <a href="https://www.facebook.com/share/16dXRKS7Ce/" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">Facebook</a>
+    <a href="https://www.tiktok.com/@lasmarias.digital?_t=ZS-8xyCoLpkrAe&_r=1" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">TikTok</a>
+    <a href="https://youtube.com/@lasmarias.digital?si=bqxZkfaowGB81HN8" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">YouTube</a>
+  </div>
+</footer>
 </body>
+  <div style="text-align: center; margin-bottom: 1.5rem;">
+    <img src="logo.png" alt="Las Marías Digital" style="max-width: 160px;" />
+  </div>
+
 </html>
 <!-- Version: 2025-07-17 -->
