--- a/Calculadora.html
+++ b/Calculadora.html
@@ -116,7 +116,11 @@
     <a href="https://youtube.com/@lasmarias.digital?si=bqxZkfaowGB81HN8" target="_blank" style="margin: 0 10px; color: #5D3A9B; text-decoration: none;">YouTube</a>
   </div>
 </footer>
-</body>
+  <body class="bg-white text-gray-900">
+  <div class="w-full flex justify-center mt-6 mb-4">
+    <img src="logo.png" alt="Logo Las Marias" class="h-16 w-auto" />
+  </div>
+
   <div style="text-align: center; margin-bottom: 1.5rem;">
     <img src="logo.png" alt="Las Marías Digital" style="max-width: 160px;" />
   </div>
